--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <h1 class="text-center mt-5 display-4 text-primary">Este es un parrafo para github!!!</h1>
     
-    <a href="GIT-YOUTUBE/docs/index.html" class="btn btn-primary  m-5 mL-5">2 Pagina</a>
+    <a href="GIT-YOUTUBE/index.html" class="btn btn-primary  m-5 mL-5">2 Pagina</a>
     
     <div class="m-5">
           <img src="GIT-YOUTUBE/articulo1.jpg">
