--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 </head>
 
 <body>
-    <h1 class="text-center mt-5 display-4 text-primary">Este es un parrafo para github!!! Te amo mucho mi amor y si no me crees Te amo mi Tania preciosa</h1>
+    <h1 class="text-center mt-5 display-4 text-primary">Este es un parrafo para github!!! Te amo mucho mi amor y si no me crees Te amo mi Tania preciosa.
+    Ahora agrego otro parrafo de prueba</h1>
     
     <a href="imagenes/index.html" class="btn btn-primary  m-5 mL-5">2 Pagina</a>
     
